[package]
name = "auto-profile-service"
version = "0.1.0"
authors = ["Esraa Jbara <jbesraa@gmail.com>"]
edition = "2021"

[[bin]]
name = "auto-profile-service"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["macros", "fs", "rt-multi-thread"] }
warp = { version = "0.3.2", features =["tls"] }
futures = { version = "0.3", default-features = false }
bytes = "1.0"
dotenv = "0.15.0"
log = "0.4"
pretty_env_logger = "0.4"
diesel = { version = "1.4.4", features = ["postgres", "r2d2"] }
serde_derive = "1.0"
serde = "1.0"
serde_json = "1.0.79"
